Horizontal scrolling fixed

--- a/css/style.css
+++ b/css/style.css
@@ -469,6 +469,7 @@ ul a:hover {
 }
 .main3 img {
   border-radius: 2px;
+  max-width: 100%;
 }
 
 /*mobile*/
@@ -483,11 +484,12 @@ ul a:hover {
   margin-bottom: 20px;
   padding-inline: 10px;
   width: 450px;
+  max-width: 100%;
   height: 730px;
   background-color: transparent;
 }
 .flexcontainer .card img {
-  width: 100%;
+  max-width: 100%;
   -o-object-fit: contain;
      object-fit: contain;
 }
