--- a/scss/_main3.scss
+++ b/scss/_main3.scss
@@ -23,6 +23,7 @@ h2 {
 
 img {
     border-radius: 2px;
+    max-width: 100%;
 }
 
 }
@@ -40,12 +41,13 @@ margin: 10px;
     margin-bottom: 20px;
     padding-inline: 10px;
     width: 450px;
+    max-width: 100%;
     height: 730px;
     background-color: transparent;
 
 
     img {
-        width: 100%;
+        max-width: 100%;
         object-fit: contain;
     }
 
